# t.SicView

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: PRD.md
gomsic_core/: __init__.py  api.py  extractor.py  identifier.py  models.py
gomsic_core/debug_log/: trace.py
gomsic_core/errors/: __init__.py  detector.py  known_issues.py  learning.py  severity.py  verifier.py
gomsic_core/parsers/: __init__.py  activity_timeline.py  base.py  cameras.py  codemeter.py  drivers.py  gcs_camera.py  gomsoftware_cfg.py  hardware_service.py  licensing.py  logs.py  network.py  quality_suite_log.py  system_info.py  usb.py  windows_events.py  windows_update.py  zeiss_versions.py
gomsic_core/report/: __init__.py  builder.py
knowledge_base/: README.md  compatibility.yaml  driver_rules.yaml  license_rules.yaml  nic_rules.yaml  patterns.yaml
pwa/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
pwa/scripts/: setup.mjs
pwa/src/: index.css
pwa/src/components/: App.tsx  FileDropzone.css  FileDropzone.tsx  ProgressPanel.css  ProgressPanel.tsx
pwa/src/worker/: extractor.ts  kb-loader.ts  models.ts  parse-worker.ts
server/: app.py
server/static/: index.html
standalone/: .gitignore  README.md  forge.config.js  main.js  package-lock.json  package.json  preload.js  server_entry.py
standalone/assets/: README.txt
tests/: test_integration.py  test_parsers_unit.py  test_v030.py
(+34 files in other folders)
